postgres-pvc-pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  labels:
    name: postgres-deploy
    app: django-pg-pvc
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
      app: django-pg-pvc
  template:
    metadata:
      name: postgres-pod
      labels:
        name: postgres-pod
        app: django-pg-pvc
    spec:
      containers:
        - name: postgres
          image: postgres
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
