django-pvc-pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-pg-pvc
spec:
  type: NodePort
  selector:
    app: django-pg-pvc
  ports:
    - name: 8000-8000
      protocol: TCP
      port: 8000
      targetPort: 8000
