postgres-pvc-pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: postgres-service
    app: django-pg-pvc
spec:
  type: NodePort  
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    name: postgres-pod
    app: django-pg-pvc
