ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-pg-pvc
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: django-service
            port:
              number: 80
        path: /
        pathType: Prefix
